--- a/readthedocsext/theme/templates/projects/partials/edit/user_list.html
+++ b/readthedocsext/theme/templates/projects/partials/edit/user_list.html
@@ -1,12 +1,8 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
-{% load gravatar %}
-
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
+{% load gravatar_url from gravatar %}
 
 {% block top_left_menu_items %}
 {% endblock top_left_menu_items %}
@@ -15,9 +11,10 @@
   {% url "projects_users_create" project.slug as create_url %}
   {% trans "Add maintainer" as create_text %}
   {% include "includes/crud/create_button.html" with url=create_url text=create_text %}
-{% endblock %}
+{% endblock create_button %}
 
-{% block list_placeholder_icon %}{% endblock %}
+{% block list_placeholder_icon %}
+{% endblock list_placeholder_icon %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     This project currently has no maintainers.
@@ -34,14 +31,16 @@
   {% endblocktrans %}
   {# Repeating the include because Django templates make conditional variables impossible #}
   {% if object == request.user %}
-    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url field_name="username" field_value=object.username action_text=action_text context_text=context_text is_disabled=True %}
+    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url field_name="username" field_value=object.username action_text=action_text content_text=content_text is_disabled=True %}
   {% else %}
-    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url field_name="username" field_value=object.username action_text=action_text context_text=context_text is_disabled=False %}
+    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url field_name="username" field_value=object.username action_text=action_text content_text=content_text is_disabled=False %}
   {% endif %}
 {% endblock list_item_right_buttons %}
 
 {% block list_item_image %}
-  <img class="ui rounded square image" src="{% gravatar_url object.email 64 %}">
+  <img class="ui rounded square image"
+       alt="{% trans "User avatar" %}"
+       src="{% gravatar_url object.email 64 %}">
 {% endblock list_item_image %}
 
 {% block list_item_header %}
@@ -56,9 +55,7 @@
 
     </a>
     {% if full_name %}
-      <div class="sub header">
-        {{ object.username }}
-      </div>
+      <div class="sub header">{{ object.username }}</div>
     {% endif %}
   {% endwith %}
 {% endblock list_item_header %}
