--- a/readthedocsext/theme/templates/account/email.html
+++ b/readthedocsext/theme/templates/account/email.html
@@ -1,22 +1,28 @@
 {% extends "profiles/base_edit.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans blocktrans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
-{% block title %}{% trans "Email addresses" %}{% endblock %}
-{% block profile_admin_change_email %}active{% endblock %}
-{% block edit_content_header %} {% trans "Email addresses" %} {% endblock %}
+{% block title %}
+  {% trans "Email addresses" %}
+{% endblock title %}
+{% block profile_admin_change_email %}
+  active
+{% endblock profile_admin_change_email %}
+{% block edit_content_header %}
+  {% trans "Email addresses" %}
+{% endblock edit_content_header %}
 
 {% block edit_content %}
   {% include "account/partials/email_list.html" with objects=user.emailaddress_set.all %}
 
-  <h3 class="ui medium header">
-    {% trans "Add email address" %}
-  </h3>
+  <h3 class="ui medium header">{% trans "Add email address" %}</h3>
 
   <form class="ui form" method="post" action="{% url 'account_email' %}">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="ui primary button" type="submit" name="action_add">{% trans "Add email" %}</button>
+    <button class="ui primary button" type="submit" name="action_add">
+      {% trans "Add email" %}
+    </button>
   </form>
-{% endblock %}
+{% endblock edit_content %}
