--- a/readthedocsext/theme/templates/account/partials/email_list.html
+++ b/readthedocsext/theme/templates/account/partials/email_list.html
@@ -1,20 +1,16 @@
 {% extends "includes/crud/table_list.html" %}
 
-{% load i18n %}
-
-{% load gravatar %}
-
-{% load core_tags %}
-{% load privacy_tags %}
-{% load projects_tags %}
+{% load trans blocktrans from i18n %}
 
 {% block top_menu %}
 {% endblock top_menu %}
 
 {% block create_button %}
-{% endblock %}
+{% endblock create_button %}
 
-{% block list_placeholder_icon_class %}fa-duotone fa-envelope-dot{% endblock %}
+{% block list_placeholder_icon_class %}
+  fa-duotone fa-envelope-dot
+{% endblock list_placeholder_icon_class %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     No email addresses have been configured yet
@@ -35,7 +31,10 @@
         <i class="fa-solid fa-star icon"></i>
         <form action="{{ form_url }}" method="post">
           {% csrf_token %}
-          <input type="hidden" name="email" {% if object.primary %}checked="checked"{% endif %} value="{{ object.email }}"/>
+          <input type="hidden"
+                 name="email"
+                 {% if object.primary %}checked="checked"{% endif %}
+                 value="{{ object.email }}" />
           <input type="hidden" name="action_primary" value="" />
         </form>
       </div>
@@ -45,7 +44,10 @@
         <i class="fa-solid fa-refresh icon"></i>
         <form action="{{ form_url }}" method="post">
           {% csrf_token %}
-          <input type="hidden" name="email" {% if object.primary %}checked="checked"{% endif %} value="{{ object.email }}"/>
+          <input type="hidden"
+                 name="email"
+                 {% if object.primary %}checked="checked"{% endif %}
+                 value="{{ object.email }}" />
           <input type="hidden" name="action_send" value="" />
         </form>
       </div>
@@ -54,7 +56,7 @@
     {% blocktrans trimmed asvar content_text with email=object.email %}
       Remove email address {{ email }}?
     {% endblocktrans %}
-    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url action_name="action_remove" action_text=action_text context_text=context_text field_name="email" field_value=object.email %}
+    {% include "includes/crud/remove_button.html" with id=object.pk form_url=form_url action_name="action_remove" action_text=action_text content_text=content_text field_name="email" field_value=object.email %}
   </div>
 {% endblock list_item_right_menu %}
 
@@ -64,9 +66,7 @@
 {% block list_item_header %}
   <div>
     {{ object.email }}
-    {% if object.primary %}
-      <i class="fa-solid fa-star icon"></i>
-    {% endif %}
+    {% if object.primary %}<i class="fa-solid fa-star icon"></i>{% endif %}
   </div>
   <div class="sub header">
     <div class="ui horizontal list">
@@ -82,9 +82,7 @@
         </span>
       {% endif %}
       {% if object.primary %}
-        <span class="item">
-          {% trans "Primary email" %}
-        </span>
+        <span class="item">{% trans "Primary email" %}</span>
       {% endif %}
     </div>
   </div>
