--- a/readthedocsext/theme/templates/projects/settings_basics_form.html
+++ b/readthedocsext/theme/templates/projects/settings_basics_form.html
@@ -1,11 +1,17 @@
 {% extends "projects/project_edit_base.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+{% load trans blocktrans from i18n %}
+{% load crispy from crispy_forms_tags %}
 
-{% block title %}{% trans "Edit Project" %}{% endblock %}
-{% block project_edit_content_header %}{% trans "Settings" %}{% endblock %}
-{% block project_edit_active %}active{% endblock %}
+{% block title %}
+  {% trans "Edit Project" %}
+{% endblock title %}
+{% block project_edit_content_header %}
+  {% trans "Settings" %}
+{% endblock project_edit_content_header %}
+{% block project_edit_active %}
+  active
+{% endblock project_edit_active %}
 
 {% block project_edit_content %}
   <form class="ui form" method="post" action=".">
@@ -14,14 +20,10 @@
     <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
   </form>
 
-  <div class="ui horizontal divider">
-    {% trans "More" %}
-  </div>
+  <div class="ui horizontal divider">{% trans "More" %}</div>
 
   <div class="ui red segment">
-    <h3 class="ui small header">
-      {% trans "Delete project" %}
-    </h3>
+    <h3 class="ui small header">{% trans "Delete project" %}</h3>
 
     <p>
       {% blocktrans trimmed %}
@@ -30,29 +32,42 @@
       {% endblocktrans %}
     </p>
 
-    <a class="ui button" data-bind="click: $root.show_modal('project-delete')">
+    <a class="ui button"
+       data-bind="click: $root.show_modal('project-delete')">
       <i class="fa-duotone fa-trash icon"></i>
       {% trans "Delete project" %}
     </a>
     <div class="ui mini modal" data-modal-id="project-delete">
-      <div class="header">
-        {% trans "Delete project" %}
-      </div>
+      <div class="header">{% trans "Delete project" %}</div>
       <div class="content">
-        {% blocktrans trimmed with project=project.name %}
-          Are you sure you want to delete the project {{project}}? This action
-          cannot be undone.
-        {% endblocktrans %}
+        <p>
+          {% blocktrans trimmed with project=project.name %}
+            Are you sure you want to delete the project {{ project }}? This action
+            cannot be undone.
+          {% endblocktrans %}
+        </p>
+        {% if project.domains.exists %}
+          <div class="ui warning message">
+            {% url "projects_domains" project.slug as domain_list_url %}
+            {% blocktrans trimmed with domain_list_url=domain_list_url %}
+              Your project has <a href="{{ domain_list_url }}">custom domains</a>,
+              make sure to also remove their DNS records.
+              Otherwise, another user may add the same domains to their project and serve that content from your domain (domain hijacking).
+            {% endblocktrans %}
+          </div>
+        {% endif %}
       </div>
       <div class="actions">
         <form method="post" action="{% url "projects_delete" project.slug %}">
           {% csrf_token %}
-          <input class="ui negative button" type="submit" value="{% trans "Delete project" %}">
+          <input class="ui negative button"
+                 type="submit"
+                 value="{% trans "Delete project" %}">
         </form>
       </div>
     </div>
   </div>
-{% endblock %}
+{% endblock project_edit_content %}
 
 {% block project_edit_sidebar_help_topics_content %}
   <div class="ui mini header">{% trans "Tutorials" %}</div>
