--- a/readthedocsext/theme/templates/gold/partials/projects_list.html
+++ b/readthedocsext/theme/templates/gold/partials/projects_list.html
@@ -7,7 +7,7 @@
 
 {% block list_placeholder_class %}
   ui short placeholder segment
-{% endblock list_placeholder_icon_class %}
+{% endblock list_placeholder_class %}
 {% block list_placeholder_icon %}
 {% endblock list_placeholder_icon %}
 {% block list_placeholder_header %}
