Float to the right

--- a/readthedocsext/theme/templates/mfa/authenticate.html
+++ b/readthedocsext/theme/templates/mfa/authenticate.html
@@ -22,7 +22,7 @@
     {% csrf_token %}
     {{ form|crispy }}
     {{ redirect_field }}
-    <div class="ui stackable relaxed text menu">
+    <div class="ui right floated text menu">
       <button class="ui button" type="submit" form="logout-from-stage">
         {% trans "Cancel" %}
       </button>
