--- a/readthedocsext/theme/templates/projects/user_form.html
+++ b/readthedocsext/theme/templates/projects/user_form.html
@@ -18,6 +18,7 @@
       <i class="fa-duotone fa-circle-info icon"></i>
       {% blocktrans trimmed %}
         Adding a user as a maintainer will give the user admin access to this project.
+        They will be sent an email with a link to accept the invitation.
       {% endblocktrans %}
     </div>
   {% endif %}
@@ -25,6 +26,6 @@
   <form class="ui form" method="post" action=".">
     {% csrf_token %}
     {{ form|crispy }}
-    <input class="ui primary button" type="submit" value="{% trans "Save" %}">
+    <input class="ui primary button" type="submit" value="{% trans "Invite" %}">
   </form>
 {% endblock project_edit_content %}
