--- a/readthedocsext/theme/templates/projects/base.html
+++ b/readthedocsext/theme/templates/projects/base.html
@@ -1,15 +1,14 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block header %}
   {% include "includes/header.html" with active_item="projects" %}
-{% endblock %}
+{% endblock header %}
 
 {% block notifications %}
   {# Project specific notifications only #}
   {% if project %}
-    <readthedocs-notification-list
-      url="{% url "projects-notifications-list" project.slug %}"
-      csrf-token="{{ csrf_token }}">
+    <readthedocs-notification-list url="{% url "projects-notifications-list" project.slug %}"
+                                   csrf-token="{{ csrf_token }}">
     </readthedocs-notification-list>
   {% endif %}
 
