Hide doctool version for now

--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -102,7 +102,12 @@
           {{ form.linkpreviews_enabled | as_crispy_field }}
           {{ form.linkpreviews_root_selector | as_crispy_field }}
           {{ form.linkpreviews_doctool_name | as_crispy_field }}
+
+          {% comment %}
+          We don't want to expose the doctool version yet.
           {{ form.linkpreviews_doctool_version | as_crispy_field }}
+          {% endcomment %}
+
         </div>
       {% endblock addons_link_previews %}
 
